# swagger/v1/swagger.yaml
@@ -120,7 +120,21 @@ paths:
         content:
           application/json:
             schema:
-              "$ref": "#/components/schemas/Appointment"
+              type: object
+              properties:
+                doctor_id:
+                  type: integer
+                  example: 2
+                description:
+                  type: string
+                  example: Scott Wells
+                datetime_of_appointment:
+                  type: string
+                  example: '2023-01-21T22:37:47.895Z'
+              required:
+              - doctor_id
+              - description
+              - datetime_of_appointment
   "/appointments/{id}":
     get:
       summary: get a appointment
@@ -184,15 +198,25 @@ paths:
           description: Unprocessable Entity
         '201':
           description: Created
-          content:
-            application/json:
-              schema:
-                "$ref": "#/components/schemas/Doctor"
       requestBody:
         content:
           application/json:
             schema:
-              "$ref": "#/components/schemas/Doctor"
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: Scott doctor
+                specialization:
+                  type: string
+                  example: specialization
+                photo:
+                  type: string
+                  example: "<attached file>"
+              required:
+              - name
+              - specialization
+              - photo
   "/doctors/{id}":
     get:
       summary: get a doctor
